Upgrade dependencies and update build and Java version to 24
Upgrade Checkstyle to 10.24.0, Mockito to 5.18.0, Jackson to 2.19.0, and Semver4j to 5.7.0. Restore task configurations and CycloneDX build process. Update project version to 1.6.0 in constants and ensure compatibility with Java 24 features.

Signed-off-by: Lucas Greuloch (greluc) <lucas.greuloch@pm.me>